<resources>
    <string name="app_name">SBeacon</string>
    <string name="title_copyright">Copyright @2012 SOSbeacon Inc. v2.30s</string>
    <string name="app_version">2.30</string>
    <string name="btnRecord">Record</string>
    <string name="btnDone">Done</string>
    <string name="btnStop">Stop</string>
    <string name="txtTime">Time:</string>
    <string name="txtPhoto">Photo:</string>
    <string name="btnCapture">Capture</string>
    <string name="btnQuite">Quit</string>
    <string name="btnBack">Back</string>
    <string name="btnSave">Save</string>
    <string name="btnSetting">Settings</string>
    <string name="btnContact">Contact</string>
    <string name="btnAdd">Add</string>
    <string name="btnAddContactPhone">From Phone</string>
    <string name="btnCancel">Cancel</string>
    <string name="btnCancelCap">CANCEL</string>
    <string name="btnAccept">Accept</string>
    <string name="btnOK">OK</string>
    <string name="btnYes">Yes</string>
    <string name="btnNo">No</string>
    <string name="btnNotNow">Not Now</string>
    <string name="btnImport">Import</string>
    <string name="btnCall">CALL NOW</string>
    <string name="btnSubmit">Submit</string>
    <string name="login">Login</string>
    <string name="register">Register</string>
    <string name="agree">Agree</string>
    <string name="enterGroupName">Enter group name</string>
    <string name="groupNameInvalid">Please enter group name</string>
    <string name="menu_item_home">Home</string>
    <string name="menu_item_review">Review</string>
    <string name="menu_item_groups">Groups</string>
    <string name="menu_item_more">Settings</string>
    <string name="menu_item_account">Account Information</string>
    <string name="menu_item_alert_settings">Alert Settings</string>
    <string name="menu_item_good_samaritan_settings">Good Samaritan</string>
    <string name="menu_item_storage_settings">Storage Settings</string>
    <string name="menu_item_contact">Contact SchoolBeacon</string>
    <string name="menu_item_send_friend">Tell a Friend</string>
    <string name="menu_item_about">About</string>
    <string name="loading">loading...</string>
    <string name="wait_loading">loading, please wait...</string>
    <string name="uploading">Uploading, please wait...</string>
    <string name="saving">saving...</string>
    <string name="starting_alert">Starting alert...</string>
    <string name="sending_alert">Sending alert...</string>
    <string name="loadingSubmit">Submit...</string>
    <string name="loadingLogin">Login...</string>
    <string name="loadingRequestPassword">Request new password...</string>
    <string name="sendingCheckIn">checking in ...</string>
    <string name="uploadSuccess">Upload success</string>
    <string name="locationServiceProblem">- Your %1$s service is enabled but your current location is temporarily unavailable.</string>
    <string name="locationServiceNotEnabled">- Your location services may not be working. Please start GPS for best location setting.</string>
    <string name="checkActivateSms">Please check SMS to active this phone number.</string>
    <string name="waitingActivation">Waiting for activation...</string>
    <string name="askReceiveSms">Did you receive a text message to activate?</string>
    <string name="verifyPhonePrompt">Please verify your mobile phone number</string>
    <string name="saved_audio_image">Saved audio and image files</string>
    <string name="lblAccount">Account Info</string>
    <string name="lblInformation">Information</string>
    <string name="lblUserName">Name:</string>
    <string name="lblEmail">Email:</string>
    <string name="lblPhonenumber">Phone number:</string>
    <string name="lblPassword">Password:</string>
    <string name="lblVoicePhone">VoicePhone:</string>
    <string name="lblTextPhone">TextPhone:</string>
    <string name="phoneNumber">Phone number</string>
    <string name="createAccount">Set up new account</string>
    <string name="updateAccount">Keep current account</string>
    <string name="lblRecordSetting">Number of 30 second recording session settings: </string>
    <string name="image_record_prompt">Time record</string>
    <string name="sendto_prompt">Select a group</string>
    <string name="lblImage">Image:</string>
    <string name="lblVoice">Voice:</string>
    <string name="lblLocation">Location:</string>
    <string name="lblCapture">Audio/Image Capture:</string>
    <string name="editGroup">Edit Group</string>
    <string name="deleteGroup">Delete Group</string>
    <string name="deleteGroupConfirm">Are you sure you want to delete this group?</string>
    <string name="viewContacts">View Contacts</string>
    <string name="groupNotAllowEdit">Cannot edit or delete default group</string>
    <string name="contact_group">Alert Groups</string>
    <string name="contact_add">Add Contact</string>
    <string name="contact_edit">Edit Contact</string>
    <string name="contact_remove">Remove Contact</string>
    <string name="contacts_add">Add Contacts</string>
    <string name="contact_add_from_contact">Add from phone contact list</string>
    <string name="contact_add_require">Please enter Name and TextPhone or Name and Email</string>
    <string name="contact_saved">Contact saved successfully</string>
    <string name="contact_not_allow_delete">Cannot edit or delete default contact</string>
    <string name="contact_not_allow_change">Default contact cannot be changed</string>
    <string name="contact_ok">OK</string>
    <string name="contact_save_confirm">Save Contacts</string>
    <string name="contact_save_confirm_message">Contact was changed, Do you want to save contacts?</string>
    <string name="contact_item_save_confirm_message">This contact information was changed, do you want to save this contact?</string>
    <string name="contact_import_confirm_message">Are you sure you want to import these contacts to %1$s?</string>
    <string name="please_select_contact">Please select contacts to import</string>
    <string name="contact_empty">Your contact record is empty or has no phone number or email address</string>
    <string name="lblAlertSetting">Alert Settings</string>
    <string name="lblAlertfamily">Set family community choices:</string>
    <string name="lblAlertfriend">Set friends community choices:</string>
    <string name="lblAlertincase">Default Group:</string>
    <string name="lblPanicSetting">Emergency Alert Settings</string>
    <string name="lblPanicTelPhonenumber">International Emergency Numbers</string>
    <string name="lblPanicPhonenumber">Emergency Number:</string>
    <string name="lblPanicNear">Alert Nearby Good Samaritans:</string>
    <string name="lblPanicMaximum">Maximum distance:</string>
    <string name="panic_distance_prompt">Select maximum distance</string>
    <string name="updateInforPrompt">Do you want to establish a login and password for security?</string>
    <string name="updateContactPrompt">Do you want to add contacts to your groups?</string>
    <string name="forgotPasswordPrompt">Do you want us to text you your new password?</string>
    <string name="lblSamaritanSetting">Good Samaritan Settings</string>
    <string name="lblSamaritanReceive">Receive Good Samaritan Alert:</string>
    <string name="lblSamaritanIncoming">Receive Government Alert:</string>
    <string name="lblSamaritanMaximum">Maximum Distance:</string>
    <string name="samari_distance_prompt">Select maximum distance</string>
    <string name="lblMemorySetting">Memory Settings</string>
    <string name="lblMemoryLocation">Location of recording storage:</string>
    <string name="lblMyDocument">My document</string>
    <string name="lblMemoryClear">Clear all recordings</string>
    <string name="lblMemoryReset">Reset All To Default</string>
    <string name="lblTellus">Tell us</string>
    <string name="lblSendEmail">Send Email</string>
    <string name="lblStorage">Storage</string>
    <string name="context_menu_item_view_label">View Contact</string>
    <string name="context_menu_item_add_label">Add Contact</string>
    <string name="context_menu_item_remove_label">Remove Contact</string>
    <string name="lblCheckingIn">Checking In</string>
    <string name="check_in_to_label">To: </string>
    <string name="check_in_to_default">Family</string>
    <string name="check_in_message_label">Message: </string>
    <string name="check_in_now">Check in Now</string>
    <string name="check_in_witness">Send audio/image recording</string>
    <string name="select_message">Select a message</string>
    <string name="enter_message">Enter your message</string>
    <string name="check_in_require">Cannot Check-in without a message</string>
    <string name="check_in_require_to">Please enter phone in "TO" field on screen</string>
    <string name="check_in_contact_has_not_phone">Please enter mobile phone number for this contact</string>
    <string name="check_in_success">Check-in sent successfully</string>
    <string name="check_in_start_audio_now">Start Audio Recording Now \nNarrate the Scene or Record Your Message</string>
    <string name="check_in_captureinseconds">Next Photo in %1$d secs</string>
    <string name="check_in_seconds_left">%1$d seconds left for audio recording</string>
    <string name="confirm">Confirm</string>
    <string name="confirm_ok">Confirm I\'m OK</string>
    <string name="confirm_help">SEND HELP ALERT</string>
    <string name="confirm_call">CALLING EMERGENCY PHONE</string>
    <string name="alert_sent">Alert sent successfully.</string>
    <string name="allGroups">ALL GROUPS</string>
    <string name="singleContact">Single Contact</string>
    <string name="smsLimit">Message length exceeds SMS limit.</string>
    <string name="attachFilesConfirm">Do you want to send audio and images with this broadcast?</string>
    <string name="checkInOk">I\'m OK</string>
    <string name="title_checkin_record">Check-in</string>
    <string name="title_send_alert">Send Emergency Alert</string>
    <string name="title_slide_begin">slide to begin</string>
    <string name="title_slide_ative">slide to activate</string>
    <string name="title_call_emergency">Call Emergency Phone</string>
    <string name="title_slide_start">slide to start</string>
    <string name="title_im_ok">Broadcast Update</string>
    <string name="title_im_ok_easy">Check-in I\'m OK</string>
    <string name="title_need_help">EMERGENCY</string>
    <string name="title_need_help_easy">Send Alert</string>
    <string name="title_checkin_original">Check-in Group Message</string>
    <string name="title_call_original">Call Emergency Phone</string>
    <string name="title_login">Login</string>
    <string name="tellus_name_label">Name: </string>
    <string name="tellus_email_label">Email: </string>
    <string name="tellus_subject_label">Subject: </string>
    <string name="tellus_message_label">Message: </string>
    <string name="title_to">To</string>
    <string name="title_cc">Cc/Bcc, From:</string>
    <string name="tellus_send">Send</string>
    <string name="tellus_sending">sending...</string>
    <string name="tellus_require">Please enter your subject and message.</string>
    <string name="set_emergency_number">- Emergency phone number not yet set for your location.</string>
    <string name="set_emergency_number_prompt">Emergency Phone number not yet set for your location. Do you want to set it now?</string>
    <string name="school_beacon_mobile_broadcast">School Beacon Mobile Broadcast</string>
    <string name="select_broadcast_type">Select Broadcast Type</string>
    <string name="select_broadcast_group">Select Broadcast Group</string>
    <string name="short_text_message">Short text message</string>
    <string name="long_email_message">Long email message</string>
    <string name="preview_broadcast">Broadcast List</string>
    <string name="send_broadcast">Send Broadcast</string>
    <string name="cancel">Cancel</string>
</resources>