<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
	android:layout_width="fill_parent" android:layout_height="fill_parent"
	android:gravity="top" android:background="@drawable/settings">
	<TableLayout android:layout_height="fill_parent"
		android:layout_width="wrap_content" android:layout_gravity="center_horizontal"
		android:layout_marginTop="10dip">
		<TableRow>
			<TextView android:text="@string/lblUserName" android:width="80dip" />
			<EditText android:id="@+id/txtUserName"
				android:layout_width="200dip" android:layout_height="wrap_content"
				android:singleLine="true" />
		</TableRow>

		<TableRow>
			<TextView android:text="@string/lblEmail" />
			<EditText android:id="@+id/txtEmail" android:layout_width="200dip"
				android:layout_height="wrap_content" android:inputType="textEmailAddress"
				android:singleLine="true" />
		</TableRow>

		<TableRow>
			<TextView android:text="@string/lblPhonenumber" />
			<EditText android:id="@+id/txtPhonenumber"
				android:layout_width="200dip" android:layout_height="wrap_content"
				android:enabled="false" android:inputType="numberDecimal"
				android:singleLine="true" />
		</TableRow>
		<TableRow>
			<TextView android:text="@string/lblPassword" />
			<EditText android:id="@+id/txtPassword"
				android:layout_width="200dip" android:layout_height="wrap_content"
				android:password="true" android:singleLine="true" 
				android:hint="Enter password"/>
		</TableRow>


	</TableLayout>
</ScrollView>
